---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2020-08-15
  Changes:
    - Updated to Factorio 1.0
  Bugfixes:
    - Fixed a crash due to improper checking of force availability data for crafters
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2020-08-10
  Features:
    - Added base crafting speed to recipe pages
    - Added character to "made in" list for recipes that are hand-craftable
    - Added brief interaction helps to all object tooltips
  Changes:
    - All recipe ingredients and products will always be shown despite object visibility settings
    - Renamed "machine" back to "crafter" as the reason for the name change is moot at this point
  Bugfixes:
    - Fixed a crash when a mod would be removed while translations were running, but before those translations translated all of that mod's strings
    - Fixed a crash when opening a quick reference panel for a hidden recipe, when show hidden objects is turned off
    - Fixed a desync related to a player's connected status in multiplayer during a mod change
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2020-07-27
  Features:
    - Enabling "use internal names" will change search to use internal names as well
  Changes:
    - Renamed "show internal names" to "use internal names" and moved to search settings
  Bugfixes:
    - Fixed a desync related to player.connnected being unreliable during on_configuration_changed in multiplayer
    - Fixed a potential crash if a GUI handler was removed between versions
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2020-07-25
  Bugfixes: