@@ -75,6 +75,7 @@ search=Search
 seconds-tooltip=The amount of time the recipe will take in a crafter with no modules and a crafting speed of exactly 1.0.
 seconds=__1__ seconds
 settings=Settings
+stack-size=Stack size:
 technology=Technology
 unlocked-by=Unlocked by (__1__)
 unresearched=Unresearched
