@@ -55,6 +55,7 @@ function global_data.build_recipe_book()
     {dictionary="gui", internal="click_to_view_technology", localised={"rb-gui.click-to-view-technology"}},
     {dictionary="gui", internal="click_to_view", localised={"rb-gui.click-to-view"}},
     {dictionary="gui", internal="hidden", localised={"rb-gui.hidden"}},
+    {dictionary="gui", internal="stack_size", localised={"rb-gui.stack-size"}},
     {dictionary="gui", internal="unresearched", localised={"rb-gui.unresearched"}},
     -- character crafter
     {dictionary="crafter", internal="character", localised={"entity-name.character"}}
@@ -108,6 +109,7 @@ function global_data.build_recipe_book()
         prototype_name = name,
         recipe_categories = {},
         sprite_class = class,
+        stack_size = class == "item" and prototype.stack_size or nil,
         unlocked_by = {}
       }
       -- add to translation table
