@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.2
 Date: ????
+  Features:
+    - Added stack size to item tooltips
   Changes:
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.1
